resources/grafana/07.grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/part-of: grafana-infra
  name: grafana-route
  namespace: grafana
spec:
  port:
    targetPort: grafana
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
